refactor(models): :recycle: vastly improved subscriptions model
- subscriptions is now composed of details and feed
- reduce method bloat for filtering/fetching of subscriptions/feed
- coalesce handlers for fetching subscriptions
